log-output-splitted/manifests/deployment_logs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logpod-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logpod
  template:
    metadata:
      labels:
        app: logpod
    spec:
      volumes:
        - name: shared-logs
          emptyDir: {}
        - name: configmap-volume
          configMap:
            name: configmap-reader
            items:
              - key: "information.txt" 
                path: "information.txt"
      containers:
        - name: log-writer
          resources:
            limits:
              cpu: "1m"
              memory: "10Mi"
          image: desipeli/dwk-log-writer:1.11
          volumeMounts:
          - name: shared-logs
            mountPath: /app/files/pod
        - name: log-reader
          resources:
            limits:
              cpu: "1m"
              memory: "10Mi"
          image: desipeli/dwk-log-reader:4.01
          imagePullPolicy: Always
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8001
          volumeMounts:
          - name: shared-logs
            mountPath: /app/files/pod
          - name: configmap-volume
            mountPath: "/app/config"
            readOnly: true
