log-output-splitted/manifests/deployment_ping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: desipeli/dwk-pingpong:4.01
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "50m"
              memory: "10Mi"
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8002
