log-output-splitted/manifests/service_logs.yaml
apiVersion: v1
kind: Service
metadata:
  name: logpod-svc
spec:
  type: NodePort
  selector:
    app: logpod
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8001
