log-output-splitted/manifests/service_ping.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: NodePort
  selector:
    app: ping-pong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8002
